--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,23 @@
+/* JukeBoXT - Web Jukebox
+   © 2025 Vaishnavi Gudimella. Licensed under the MIT License.
+   See LICENSE file for details.
+*/
+
+.logo {
+    position: absolute;
+    top: 5%;
+    left: 3%;
+}
+
+header {
+    position: absolute;
+    top: 5%;
+    left: 10%;
+}
+
 body {
-    background-color: #222;
-    color: #fff;
+    background-color: #000;
+    color: #000;
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -10,8 +27,10 @@ body {
 }
 
 .jukebox {
-    background: #333;
+    background: #4E8278;
     padding: 20px;
+    width: 350px;
+    height: 500px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
@@ -35,6 +54,13 @@ body {
 
 .controls button:hover {
     color: #1DB954; /* Spotify green */
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    color: #DFBF87;
+
 }
 
 input[type="range"] {
